--- a/src/App.scss
+++ b/src/App.scss
@@ -46,3 +46,16 @@ $charcoal: #ccc;
     max-width: 200px;
   }
 }
+
+.canvas {
+  width: 900px;
+  height: 1500px;
+}
+
+.pixel {
+  border: 1px solid grey;
+  height: 15px;
+  width: 15px;
+  display: inline-block;
+  margin: 0;
+}
