--- a/src/App.scss
+++ b/src/App.scss
@@ -49,18 +49,22 @@ $charcoal: #ccc;
 
 .artRoom {
   display: flex;
+}
+
+.left-side {
+  display: flex;
+  flex-direction: column;
   align-content: start;
+  width: 300px;
 }
 
 .canvas {
-  position: relative;
   display: grid;
-  grid-template-columns: repeat(60, 1fr);
-  grid-template-rows: repeat(100, 1fr);
+  grid-template-columns: repeat(60, 15px);
+  grid-template-rows: repeat(100, 15px);
   width: 902px;
   height: 1500px;
-  margin: 0;
-  padding: 0;
+  margin: 15px;
 }
 
 .pixel {
